# py_web_HW13_part1

./: .env_example  README.md  docker-compose.yml  main.py  pyproject.toml
src/: schemas.py
src/conf/: config.ini  config.py
src/database/: db.py  models.py  seeds.py
src/repository/: contacts.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  email.py
